syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.models";



message Balance {
  int32 amount = 1;

}


  message DepositRequest {
    int32 accountNumber = 1;
    int32 amount = 2;
  }



  service BankService{
    //client-side streaming
    rpc cashDeposit(stream DepositRequest) returns(Balance);
  }


